# insitu-ft-calibration

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml
src/: CMakeLists.txt
src/InSituFTCalibration/: CMakeLists.txt  calibration_matrix_estimator.cpp  calibration_matrix_estimator.h  dataset.cpp  dataset.h  eigen_wrappers.h  force_calibration_matrix_estimator.cpp  force_calibration_matrix_estimator.h  offset_estimator.cpp  offset_estimator.h  wrappers.h  yarp_wrappers.h
test/: CMakeLists.txt  calibration_matrix_estimator_UNIT.cpp  dataset_UNIT.cpp  force_calibration_matrix_estimator_UNIT.cpp  offset_estimator_UNIT.cpp
